Backed out changeset 61808b1ff0a8 (bug 1555497) for reftest failure in chrome://reftest/content/xul/menulist-shrinkwrap-2.xul
--HG--
extra : rebase_source : 10e991002af8ad42e6e2e7efba8cf9e89c16a6ee

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -229,6 +229,7 @@ menubar > menu:empty {
 /********* menupopup, panel, & tooltip ***********/
 
 menupopup {
+  -moz-binding: url("chrome://global/content/bindings/popup.xml#popup");
   -moz-box-orient: vertical;
 }
 
@@ -512,6 +513,17 @@ menulist[popuponly="true"] {
   height: 0 !important;
   min-height: 0 !important;
   border: 0 !important;
+}
+
+menulist > menupopup > .popup-internal-box > .scrollbutton-up,
+menulist > menupopup > .popup-internal-box > .arrowscrollbox-overflow-start-indicator,
+menulist > menupopup > .popup-internal-box > .arrowscrollbox-overflow-end-indicator,
+menulist > menupopup > .popup-internal-box > .scrollbutton-down {
+  display: none;
+}
+
+menulist > menupopup > .popup-internal-box > .arrowscrollbox-scrollbox {
+  overflow: auto;
 }
 
 /********** splitter **********/
