--- a/toolkit/themes/osx/global/popup.css
+++ b/toolkit/themes/osx/global/popup.css
@@ -106,6 +106,10 @@ menulist > menupopup:not([position]) {
   margin-top: -2px;
 }
 
+menulist > menupopup > .popup-internal-box {
+  padding: 0;
+}
+
 menupopup[customoptionstyling="true"] {
   -moz-appearance: none;
   padding-top: 0;
